CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(arma-ws)

FILE(GLOB SOURCES arma-ws/*.cpp)
INCLUDE_DIRECTORIES(arma-ws)

SET(CMAKE_CXX_STANDARD 11)

# -----------------------
# START STATIC LIBRARIES
# -----------------------

# I know..... but it works :)

# BOOST
IF(DEFINED ENV{BOOST_ROOT})
	IF(EXISTS "$ENV{BOOST_ROOT}/boost/filesystem.hpp")
		MESSAGE(STATUS "BOOST include directory: $ENV{BOOST_ROOT}")
		INCLUDE_DIRECTORIES($ENV{BOOST_ROOT})
	ELSE()
		MESSAGE(FATAL_ERROR "\nBOOST is found but:\n BOOST_ROOT/boost not found")
	ENDIF()
ELSE()
	MESSAGE(FATAL_ERROR "\nBOOST not found\n Please Set BOOST_ROOT")
ENDIF()

IF(DEFINED ENV{BOOST_LIBRARYDIR})
	FILE(GLOB BOOST_LIBS $ENV{BOOST_LIBRARYDIR}/*.a
						 $ENV{BOOST_LIBRARYDIR}/*.lib)
						 
	LIST(LENGTH BOOST_LIBS BOOST_LIBS_LENGTH)
	IF(${BOOST_LIBS_LENGTH} GREATER 0)
		MESSAGE(STATUS "BOOST library directory: $ENV{BOOST_LIBRARYDIR}")
		LINK_DIRECTORIES($ENV{BOOST_LIBRARYDIR})
	ELSE()
		MESSAGE(FATAL_ERROR "\nBOOST is found but:\n BOOST_LIBRARYDIR does not contain any libraries")
	ENDIF()
ELSE()
	MESSAGE(FATAL_ERROR "\nBOOST not found\n Please Set BOOST_LIBRARYDIR")
ENDIF()

# WEBSOCKETPP
IF(DEFINED ENV{WEBSOCKETPP_ROOT})
	IF(EXISTS "$ENV{WEBSOCKETPP_ROOT}/websocketpp/server.hpp")
		MESSAGE(STATUS "WEBSOCKETPP include directory: $ENV{WEBSOCKETPP_ROOT}")
		INCLUDE_DIRECTORIES($ENV{WEBSOCKETPP_ROOT})
	ELSE()
		MESSAGE(FATAL_ERROR "\nWEBSOCKETPP is found but:\n WEBSOCKETPP_ROOT/boost not found")
	ENDIF()
ELSE()
	MESSAGE(FATAL_ERROR "\nWEBSOCKETPP not found\n Please Set WEBSOCKETPP_ROOT")
ENDIF()

# -----------------------
# END STATIC LIBRARIES
# -----------------------

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})